syntax = "proto3";

package io.stellarproject.terra.v1;

import weak "gogoproto/gogo.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "github.com/stellarproject/terraos/api/types/v1/machine.proto";

option go_package = "github.com/stellarproject/terraos/api/terra/v1;v1";

service Terra {
	// Register a new machine to terra
	rpc Register(RegisterRequest) returns (RegisterResponse);
	// Machines returns all registered machines
	rpc Machines(google.protobuf.Empty) returns (MachinesResponse);
}

message RegisterRequest {
	uint32 cpus = 1;
	uint64 memory = 2;
	repeated types.v1.Netdev network_devices = 3;
}

message RegisterResponse {
	types.v1.Machine machine = 1;
}

message MachinesResponse {
	repeated types.v1.Machine machines = 1;
}
